add onclick answer

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
     <div id="questions" class="questions">
         <h2 id="questionsTitle"></h2>
-        <button id="answerOne" class="answer">1. strings</button>
-        <button id="answerTwo" class="answer">2. booleans</button>
-        <button id="answerThree" class="answer">3. alerts</button>
-        <button id="answerFour" class="answer">4. numbers</button>
+        <button id="answerOne" class="answer" onclick="chooseAnswer(1)"></button>
+        <button id="answerTwo" class="answer" onclick="chooseAnswer(2)"></button>
+        <button id="answerThree" class="answer" onclick="chooseAnswer(3)"></button>
+        <button id="answerFour" class="answer" onclick="chooseAnswer(4)"></button>
     </div>
 
     <div id="rightOrWrong">
