--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <body>
     <header>
         <div class="highscores">
-            <h2 id="viewHighScores">View Highscores</h2>
+            <button id="viewHighScores">View Highscores</button>
         </div>
 
         <div class="timer">
@@ -51,7 +51,12 @@
 
     </div>
 
+    <div id="viewHignScores" class="viewHignScores">
+        <h1>Highscores</h1>
+        <div id="highScoreList"></div>
 
+
+    </div>
 
     <script src="./assest/js/script.js"></script>
   </body>
