modified code and added pictures

--- a/index.html
+++ b/index.html
@@ -46,15 +46,21 @@
         <h2>All Done</h2>
 
         <div id="finalScore"></div>
-        <input type="text" id="enterInitials" value="Enter Initials">
-        <button id="initialButton">Submit</button>
 
+        <form>
+            <input type="text" id="enterInitials" placeholder="Enter Initials">
+            <button id="initialButton">Submit</button>
+        </form>
     </div>
 
     <div id="viewHignScores" class="viewHignScores">
         <h1>Highscores</h1>
-        <div id="highScoreList"></div>
+        <ol id="highScoreList">
 
+        </ol>
+
+        <button id="goback">Go Back</button>
+        <button id="clearhighscores">Clear Hignscores</button>
 
     </div>
 
